[package]
name = "ngx-prom"
version = "0.1.0"
authors = ["Arthur LE MOIGNE <me@alemoigne.fr>"]
edition = "2018"

[dependencies]
chrono = "0.4"
regex = "1"
lazy_static = "1.4.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.8"
clap = { version = "3.0.0-beta.2", features = ["std"] }
prometheus = "0.11"
actix-web = { version = "3", default-features = false }
actix-web-prom = "0.5"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
